# TP2_algoritmos_2c2021

./: CMakeLists.txt  Lista.h  Mazo.h  Nodo.h
